--- a/frntend/templates/home.html
+++ b/frntend/templates/home.html
@@ -21,7 +21,7 @@
         <header id="menu-jk" class="container-fluid">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <img src="{% static 'assets/images/logo.jpg' %}" alt="">
+                    <img src="{% static 'assets/images/logo2.png' %}" alt="" width="50px" height="80px">
                      <a data-toggle="collapse" data-target="#menu" href="#menu"><i class="fas d-block d-lg-none  small-menu fa-bars"></i></a>
                 </div>
                 <div id="menu" class="col-lg-6 col-md-9 d-none d-md-block navs">
@@ -117,24 +117,16 @@
                 <div class="col-md-8">
                     <div class="row form-detail">
                         <div class="col-md-3 ffb">
-                            <select name="" id="aa" class="form-control">
-                                <option value="">Travel Destinaton</option>
-                                <option value="1">Australia</option>
-                                <option value="2">Canada</option>
+
+                        </div>
+                         <div class="col-md-3 ffb">
+                        </div>
+                         <div class="col-md-3 ffb">
+
                             </select>
                         </div>
                          <div class="col-md-3 ffb">
-                            <input placeholder="Select Date" type="text" class="form-control">
-                        </div>
-                         <div class="col-md-3 ffb">
-                             <select name="" id="" class="form-control">
-                                <option value="">Travel Type</option>
-                                <option value="1">First Option</option>
-                                <option value="2">Second Option</option>
-                            </select>
-                        </div>
-                         <div class="col-md-3 ffb">
-                            <button class="btn btn-primary w-100">Search</button>
+
                         </div>
                     </div>
                 </div>
@@ -279,7 +271,7 @@
                 <div class="col-md-6">
                     <div class="review-col">
                         <div class="profil">
-                          <img src="{% static 'assets/images/testimonial/member-02.jpg' %}" alt="">
+                          <img src="{% static 'assets/images/testimonial/john.jpeg' %}" alt="">
                         </div>
                         <div class="review-detail">
                             <h4>Discover Costa Rica</h4>
