--- a/frntend/templates/hotelsall.html
+++ b/frntend/templates/hotelsall.html
@@ -21,7 +21,7 @@
     <header id="menu-jk" class="container-fluid">
         <div class="row">
             <div class="col-md-3 logo">
-                <img src="{% static 'assets/images/logo.jpg' %}" alt="">
+                    <img src="{% static 'assets/images/logo2.png' %}" alt="" width="50px" height="80px">
                  <a data-toggle="collapse" data-target="#menu" href="#menu"><i class="fas d-block d-lg-none  small-menu fa-bars"></i></a>
             </div>
             <div id="menu" class="col-lg-6 col-md-9 d-none d-md-block navs">
@@ -58,7 +58,7 @@
 <div class="page-nav no-margin row">
     <div class="container">
         <div class="row">
-            <h2>Our Packages</h2>
+            <h2>All Hotels</h2>
             <ul>
                 <li> <a href="#"><i class="fas fa-home"></i> Home</a></li>
                 <li><i class="fas fa-angle-double-right"></i> Packages</li>
