--- a/frntend/templates/resrve_page.html
+++ b/frntend/templates/resrve_page.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 <body>
-   <ul>
-                        <li><a href="{% url 'home_page' %}">Home</a></li>
-                        </ul>
+
 
 
     <div class="container">
@@ -92,6 +90,14 @@
 
             </div>
         </form>
+            <div style="margin-left:500px;margin-top:10px;">
+                                                            <a href="{% url 'home_page' %}"> <button type="submit" class="btn btn-primary">back to home</button></a>
+
+            </div>
+
+
+
+
         </div>
     </div>
 </body>
