--- a/frntend/templates/singlepage_hotel.html
+++ b/frntend/templates/singlepage_hotel.html
@@ -60,7 +60,7 @@
 						<div class="col-md-3">
 							<div class="header-logo">
 								<a href="#" class="logo">
-									<img src="{% static 'hot/img/img.png' %}" alt="" height="80px" width="150px">
+                    <img src="{% static 'assets/images/logo2.png' %}" alt="" width="100px" height="100px">
 								</a>
 							</div>
 						</div>
