--- a/frntend/templates/all_destination.html
+++ b/frntend/templates/all_destination.html
@@ -21,7 +21,8 @@
     <header id="menu-jk" class="container-fluid">
         <div class="row">
             <div class="col-md-3 logo">
-                <img src="{% static 'assets/images/logo.jpg' %}" alt="">
+                                    <img src="{% static 'assets/images/logo2.png' %}" alt="" width="50px" height="80px">
+
                  <a data-toggle="collapse" data-target="#menu" href="#menu"><i class="fas d-block d-lg-none  small-menu fa-bars"></i></a>
             </div>
             <div id="menu" class="col-lg-6 col-md-9 d-none d-md-block navs">
