--- a/frntend/templates/login_user.html
+++ b/frntend/templates/login_user.html
@@ -68,6 +68,29 @@
 
 
   </div>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  {% if messages %}
+   {% for i in messages %}
+        {% if i.tags == 'success' %}
+        <script>
+            swal('{{i}}','','success')
+        </script>
+        {% elif i.tags == 'warning' %}
+        <script>
+            swal('{{i}}','','warning')
+        </script>
+        {% elif i.tags == 'error' %}
+        <script>
+            swal('{{i}}','','error')
+        </script>
+         {% else %}
+        <script>
+            swal('{{i}}','','info')
+        </script>
+        {% endif %}
+    {% endfor %}
+{% endif %}
+
 
 
 
