--- a/frntend/templates/single_activity.html
+++ b/frntend/templates/single_activity.html
@@ -27,7 +27,7 @@
 <body>
  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
    <div class="container">
-     <a class="navbar-brand" href="index.html">Pacific<span>Travel Agency</span></a>
+     <a class="navbar-brand" href="index.html"><span></span></a>
      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
        <span class="oi oi-menu"></span> Menu
      </button>
@@ -95,7 +95,7 @@
    <div class="col-md-12 text-center">
     <div class="img"  style="background-image: url({% static 'assets3/images/bg_2.jpg' %});">
      <div class="overlay"></div>
-     <h2>We Are Pacific A Travel Agency</h2>
+     <h2></h2>
      <p>We can manage your dream building A small river named Duden flows by their place</p>
      <p class="mb-0"><a href="#" class="btn btn-primary px-4 py-3">Ask For A Quote</a></p>
    </div>
