--- a/frntend/templates/single_package.html
+++ b/frntend/templates/single_package.html
@@ -22,7 +22,8 @@
     <header id="menu-jk" class="container-fluid">
         <div class="row">
             <div class="col-md-3 logo">
-                <img src="{% static 'assets/images/logo.jpg' %}" alt="">
+                                    <img src="{% static 'assets/images/logo2.png' %}" alt="" width="50px" height="80px">
+
                  <a data-toggle="collapse" data-target="#menu" href="#menu"><i class="fas d-block d-lg-none  small-menu fa-bars"></i></a>
             </div>
             <div id="menu" class="col-lg-6 col-md-9 d-none d-md-block navs">
@@ -125,54 +126,7 @@
 
 
     <!-- ################# Our Team Starts Here#######################--->
-    <section class="our-team">
-        <div class="container">
-            <div class="session-title row">
-                <h2>Our Team</h2>
-
-            </div>
-            <div class="row team-row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="single-usr">
-                        <img src="{% static 'assets/images/team/team-memb1.jpg' %}" alt="">
-                        <div class="det-o">
-                            <h4>David Kanuel</h4>
-                            <i>Facial Surgan</i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="single-usr">
-                        <img src="{% static 'assets/images/team/team-memb2.jpg' %}" alt="">
-                        <div class="det-o">
-                            <h4>David Kanuel</h4>
-                            <i>Facial Surgan</i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="single-usr">
-                        <img src="{% static 'assets/images/team/team-memb3.jpg' %}" alt="">
-                        <div class="det-o">
-                            <h4>David Kanuel</h4>
-                            <i>Facial Surgan</i>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="single-usr">
-                        <img src="{% static 'assets/images/team/team-memb4.jpg' %}" alt="">
-                        <div class="det-o">
-                            <h4>David Kanuel</h4>
-                            <i>Facial Surgan</i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-    </section>
+ 
 
 
 
